--- a/shrek.html
+++ b/shrek.html
@@ -1,5 +1,9 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
 
+<div class="shrek">
+
 <img src="shrek.jpeg" style="max-width:100%;"> 
+  
+</div>
 
 <a href="index.html">Go Back</a>
